Upgrade to java 17 (#134)
Fixes #134 and fixes #114.